[project]
name = "sphere"
version = "0.1.0"
description = "Official code for SPHERE"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.9.0",
    "einops>=0.8.1",
    "ema-pytorch>=0.7.7",
    "humanoid-bench",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "jax[cuda12]==0.5.0",
    "matplotlib>=3.10.3",
    "sbx-rl>=0.22.0",
    "scikit-learn>=1.7.1",
    "sdmetrics>=0.23.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tbparse>=0.0.9",
    "tensorboard>=2.19.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchcfm>=1.0.7",
    "torchdiffeq>=0.2.5",
    "torchvision==0.22.1",
    "tritonclient[all]>=2.59.0",
    "wandb>=0.21.0",
]

[tool.uv.sources]
humanoid-bench = { git = "https://github.com/liruiluo/humanoid-bench.git" }
